fdo#74854: better loose selection than crashing

- this is just a bandaid

Change-Id: Iebd901a9e88967e00e235f7f8849c48246e950d1
Reviewed-on: https://gerrit.libreoffice.org/8491
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>